--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href='https://unpkg.com/boxicons@2.0.7/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="style.css">
-    <link rel="icon" href="images/favicon.png" type="image/png">
+    <link rel="icon" href="favicon.png" type="image/png">
     <title>CHAWPATTY FOOD'S</title>
 </head>
 <body>
@@ -49,7 +49,7 @@
                  <a href="#" class="button">View Menu</a>
             </div>
 
-            <img src="images/burger.jpg" alt="burger" class="home__img">
+            <img src="burger.jpg" alt="burger" class="home__img">
         </div>
     </section>
 
@@ -62,7 +62,7 @@
                 <p class="about__description">we cook the best food in the entire city, with excellent customer service, the best meals and at the best price, visit us.</p>
                 <a href="#Explore-history" class="button1">Explore history</a>
             </div>
-            <img src="images/panipuri.webp" alt="" class="about__img">
+            <img src="panipuri.webp" alt="" class="about__img">
         </div>
     </section>
 
@@ -73,20 +73,20 @@
         <h2 class="section-title">Our amazing services</h2>
         <div class="services__container  bd-grid">
             <div class="services__content">
-                <img src="images/dish.jpg" alt="" class="services__img" style="height: 100px;  width: 100px;">
+                <img src="dish.jpg" alt="" class="services__img" style="height: 100px;  width: 100px;">
 
                 <h3 class="services__title services__initial">Excellent food</h3>
                 <p class="services__description services__initial">We offer our clients excellent quality, services for many years, with the best and delicious food in the city.</p>
             </div>
                 <div class="services__content">
-                <img src="images/dish1.jpg" alt="" class="services__img" style="height: 100px;  width: 100px;">
+                <img src="dish1.jpg" alt="" class="services__img" style="height: 100px;  width: 100px;">
 
                 <h3 class="services__title services__initial">Fast food</h3>
                 <p class="services__description services__initial">We offer our clients excellent quality, services for many years, with the best and delicious food in the city.</p>
                 </div>
                 <div class="services__content">
 
-                <img src="images/fast1.png" alt="" class="services__img" style="height: 100px;  width: 120px;">
+                <img src="fast1.png" alt="" class="services__img" style="height: 100px;  width: 120px;">
 
                 <h3 class="services__title services__initial">Delivery</h3>
                 <p class="services__description services__initial">We offer our clients excellent quality, services for many years, with the best and delicious food in the city.</p>
@@ -103,7 +103,7 @@
              <h2 class="section-title menu__initial">Menu of the weeek</h2>
      <div class="menu__container bd-grid">
          <div class="menu-content">
-            <img src="images/sand.jpg" alt="" class="Menu__img">
+            <img src="sand.jpg" alt="" class="Menu__img">
             <h3 class="menu__name">Sandwich</h3>
             <span class="menu__detail">Delicious dish</span>
             <span class="menu__preci">Rs.50</span>
@@ -111,7 +111,7 @@
              </a>
         </div>
         <div class="menu-content">
-             <img src="images/momo.jpg" alt="" class="Menu__img">
+             <img src="momo.jpg" alt="" class="Menu__img">
             <h3 class="menu__name">Momos</h3>
             <span class="menu__detail">Fantastic dish</span>
             <span class="menu__preci">Rs.40</span>
@@ -119,7 +119,7 @@
              </a>
         </div>     
         <div class="menu-content">
-             <img src="images/egg.jpg" alt="" class="Menu__img">
+             <img src="egg.jpg" alt="" class="Menu__img">
             <h3 class="menu__name">Egg roll</h3>
             <span class="menu__detail">Marvelous dish</span>
             <span class="menu__preci">Rs.60</span>
@@ -142,7 +142,7 @@
                     <!-- <a href="#"><img src="images/app2.jpg" alt="" class="app__store"></a> -->
                 </div>
              </div>
-            <img src="images/app3.PNG" alt="" class="app__img">
+            <img src="app3.PNG" alt="" class="app__img">
         </div>
     </section>
 
