--- a/index.html
+++ b/index.html
@@ -138,11 +138,11 @@
                 <p class="app__description">Find our application and download it, you can make reservation, food orders, see yoour deliveries on the way and much more.</p>
            
                 <div class="app__stores">
-                    <a href="#"><img src="images/app1.jpg" alt="" class="app__store"></a>
+                    <a href="#"><img src="app1.jpg" alt="" class="app__store"></a>
                     <!-- <a href="#"><img src="images/app2.jpg" alt="" class="app__store"></a> -->
                 </div>
              </div>
-            <img src="app3.PNG" alt="" class="app__img">
+            <img src="app3.png" alt="" class="app__img">
         </div>
     </section>
 
