--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
     
     <!-- ======= scroll top ======= -->
-    <a href="" class="scrolltop scroll-top" id="scroll-top">
+    <a href="" class="scrolltop scroll-top" id="top">
         <i class='bx bx-chevron-up scrolltop__icon'></i>
     </a>
     
