--- a/index.html
+++ b/index.html
@@ -103,35 +103,62 @@
 
     <!-- ==== Menu ==== -->
    
-    <section class="menu section bd-container" id="menu">           
+        <section class="menu section bd-container" id="menu">           
              <span class="section-subtitle menu__initial">Special</span>
              <h2 class="section-title menu__initial">Menu of the weeek</h2>
+    <div class="menu_count">
+   
      <div class="menu__container bd-grid">
          <div class="menu-content">
-            <img src="sand.jpg" alt="" class="Menu__img">
-            <h3 class="menu__name">Sandwich</h3>
-            <span class="menu__detail">Delicious dish</span>
-            <span class="menu__preci">Rs.50</span>
-             <a href="#" class="button menu__button"> <i class='bx bx-cart-alt'></i>
-             </a>
+            <div class="menu_inside">
+                <img src="images/sand.jpg" alt="" class="Menu__img">
+                <h3 class="menu__name">Sandwich</h3>
+                <span class="menu__detail">Delicious dish</span>
+                <span class="menu__preci">Rs.50</span>
+            </div>
+            <div class="menu_cart">
+                <div class="menu__button0">
+                    <a href="#" class="button"> <i class='bx bx-purchase-tag-alt'></i></a>
+                </div>
+                <div  class="menu__button1">
+                    <a href="#" class="button"> <i class='bx bx-cart-alt'></i></a>
+                </div>
+            </div>
         </div>
         <div class="menu-content">
-             <img src="momo.jpg" alt="" class="Menu__img">
-            <h3 class="menu__name">Momos</h3>
-            <span class="menu__detail">Fantastic dish</span>
-            <span class="menu__preci">Rs.40</span>
-             <a href="#" class="button menu__button"> <i class='bx bx-cart-alt'></i>
-             </a>
+            <div class="menu_inside">    
+                <img src="images/momo.jpg" alt="" class="Menu__img">
+                <h3 class="menu__name">Momos</h3>
+                <span class="menu__detail">Fantastic dish</span>
+                <span class="menu__preci">Rs.40</span>
+            </div>
+            <div class="menu_cart">
+                <div class="menu__button0">
+                    <a href="#" class="button"> <i class='bx bx-purchase-tag-alt'></i></a>
+                </div>
+                <div  class="menu__button1">
+                    <a href="#" class="button "> <i class='bx bx-cart-alt'></i></a>
+                </div>
+            </div>
         </div>     
         <div class="menu-content">
-             <img src="egg.jpg" alt="" class="Menu__img">
-            <h3 class="menu__name">Egg roll</h3>
-            <span class="menu__detail">Marvelous dish</span>
-            <span class="menu__preci">Rs.60</span>
-             <a href="#" class="button menu__button"> <i class='bx bx-cart-alt'></i>
-             </a>
+            <div class="menu_inside">
+                <img src="images/egg.jpg" alt="" class="Menu__img">
+                <h3 class="menu__name">Egg roll</h3>
+                <span class="menu__detail">Marvelous dish</span>
+                <span class="menu__preci">Rs.60</span>
+            </div>
+            <div class="menu_cart">
+                <div class="menu__button0">
+                    <a href="#" class="button"> <i class='bx bx-purchase-tag-alt'></i></a>
+                </div>
+                <div  class="menu__button1">
+                    <a href="#" class="button "> <i class='bx bx-cart-alt'></i></a>
+                </div>
+            </div>
         </div>
     </div>
+</div>
     </section>
 
     <!-- ===== APP ====== -->
