--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
      <div class="menu__container bd-grid">
          <div class="menu-content">
             <div class="menu_inside">
-                <img src="images/sand.jpg" alt="" class="Menu__img">
+                <img src="sand.jpg" alt="" class="Menu__img">
                 <h3 class="menu__name">Sandwich</h3>
                 <span class="menu__detail">Delicious dish</span>
                 <span class="menu__preci">Rs.50</span>
@@ -127,7 +127,7 @@
         </div>
         <div class="menu-content">
             <div class="menu_inside">    
-                <img src="images/momo.jpg" alt="" class="Menu__img">
+                <img src="momo.jpg" alt="" class="Menu__img">
                 <h3 class="menu__name">Momos</h3>
                 <span class="menu__detail">Fantastic dish</span>
                 <span class="menu__preci">Rs.40</span>
@@ -143,7 +143,7 @@
         </div>     
         <div class="menu-content">
             <div class="menu_inside">
-                <img src="images/egg.jpg" alt="" class="Menu__img">
+                <img src="egg.jpg" alt="" class="Menu__img">
                 <h3 class="menu__name">Egg roll</h3>
                 <span class="menu__detail">Marvelous dish</span>
                 <span class="menu__preci">Rs.60</span>
