--- a/index.html
+++ b/index.html
@@ -72,26 +72,26 @@
     </section>
 
     <!-- ==== Services ==== -->
-    <section class="services section bd-container" id="services">
+       <section class="services__container section bd-container" id="services">
        
         <span class="section-subtitle">Offering</span>
         <h2 class="section-title">Our amazing services</h2>
-        <div class="services__container  bd-grid">
+        <div class="services__contents  bd-grid">
             <div class="services__content">
-                <img src="dish.jpg" alt="" class="services__img" style="height: 100px;  width: 100px;">
+                <img src="images/dish.jpg" alt="" class="services__img" style="height: 100px;  width: 100px;">
 
                 <h3 class="services__title services__initial">Excellent food</h3>
                 <p class="services__description services__initial">We offer our clients excellent quality, services for many years, with the best and delicious food in the city.</p>
             </div>
-                <div class="services__content">
-                <img src="dish1.jpg" alt="" class="services__img" style="height: 100px;  width: 100px;">
+            <div class="services__content">
+                <img src="images/dish1.jpg" alt="" class="services__img" style="height: 100px;  width: 100px;">
 
                 <h3 class="services__title services__initial">Fast food</h3>
                 <p class="services__description services__initial">We offer our clients excellent quality, services for many years, with the best and delicious food in the city.</p>
-                </div>
-                <div class="services__content">
+            </div>
+            <div class="services__content">
 
-                <img src="fast1.png" alt="" class="services__img" style="height: 100px;  width: 120px;">
+                <img src="images/fast1.png" alt="" class="services__img" style="height: 100px;  width: 120px;">
 
                 <h3 class="services__title services__initial">Delivery</h3>
                 <p class="services__description services__initial">We offer our clients excellent quality, services for many years, with the best and delicious food in the city.</p>
@@ -100,7 +100,6 @@
         </div>
   
     </section> 
-
     <!-- ==== Menu ==== -->
    
         <section class="menu section bd-container" id="menu">           
