--- a/index.html
+++ b/index.html
@@ -101,16 +101,14 @@
   
     </section> 
     <!-- ==== Menu ==== -->
-   
-        <section class="menu section bd-container" id="menu">           
+      <section class="menu section bd-container" id="menu">           
              <span class="section-subtitle menu__initial">Special</span>
              <h2 class="section-title menu__initial">Menu of the weeek</h2>
     <div class="menu_count">
-   
      <div class="menu__container bd-grid">
          <div class="menu-content">
             <div class="menu_inside">
-                <img src="sand.jpg" alt="" class="Menu__img">
+                <img src="images/sand.jpg" alt="" class="Menu__img">
                 <h3 class="menu__name">Sandwich</h3>
                 <span class="menu__detail">Delicious dish</span>
                 <span class="menu__preci">Rs.50</span>
@@ -126,7 +124,7 @@
         </div>
         <div class="menu-content">
             <div class="menu_inside">    
-                <img src="momo.jpg" alt="" class="Menu__img">
+                <img src="images/momo.jpg" alt="" class="Menu__img">
                 <h3 class="menu__name">Momos</h3>
                 <span class="menu__detail">Fantastic dish</span>
                 <span class="menu__preci">Rs.40</span>
@@ -142,7 +140,55 @@
         </div>     
         <div class="menu-content">
             <div class="menu_inside">
-                <img src="egg.jpg" alt="" class="Menu__img">
+                <img src="images/egg.jpg" alt="" class="Menu__img">
+                <h3 class="menu__name">Egg roll</h3>
+                <span class="menu__detail">Marvelous dish</span>
+                <span class="menu__preci">Rs.60</span>
+            </div>
+            <div class="menu_cart">
+                <div class="menu__button0">
+                    <a href="#" class="button"> <i class='bx bx-purchase-tag-alt'></i></a>
+                </div>
+                <div  class="menu__button1">
+                    <a href="#" class="button "> <i class='bx bx-cart-alt'></i></a>
+                </div>
+            </div>
+        </div>
+        <div class="menu-content">
+            <div class="menu_inside">
+                <img src="images/sand.jpg" alt="" class="Menu__img">
+                <h3 class="menu__name">Sandwich</h3>
+                <span class="menu__detail">Delicious dish</span>
+                <span class="menu__preci">Rs.50</span>
+            </div>
+            <div class="menu_cart">
+                <div class="menu__button0">
+                    <a href="#" class="button"> <i class='bx bx-purchase-tag-alt'></i></a>
+                </div>
+                <div  class="menu__button1">
+                    <a href="#" class="button"> <i class='bx bx-cart-alt'></i></a>
+                </div>
+            </div>
+        </div>
+        <div class="menu-content">
+            <div class="menu_inside">    
+                <img src="images/momo.jpg" alt="" class="Menu__img">
+                <h3 class="menu__name">Momos</h3>
+                <span class="menu__detail">Fantastic dish</span>
+                <span class="menu__preci">Rs.40</span>
+            </div>
+            <div class="menu_cart">
+                <div class="menu__button0">
+                    <a href="#" class="button"> <i class='bx bx-purchase-tag-alt'></i></a>
+                </div>
+                <div  class="menu__button1">
+                    <a href="#" class="button "> <i class='bx bx-cart-alt'></i></a>
+                </div>
+            </div>
+        </div>     
+        <div class="menu-content">
+            <div class="menu_inside">
+                <img src="images/egg.jpg" alt="" class="Menu__img">
                 <h3 class="menu__name">Egg roll</h3>
                 <span class="menu__detail">Marvelous dish</span>
                 <span class="menu__preci">Rs.60</span>
@@ -159,7 +205,6 @@
     </div>
 </div>
     </section>
-
     <!-- ===== APP ====== -->
     <section class="app section bd-container">
         <div class="app__container bd-grid">
