--- a/index.html
+++ b/index.html
@@ -78,20 +78,20 @@
         <h2 class="section-title">Our amazing services</h2>
         <div class="services__contents  bd-grid">
             <div class="services__content">
-                <img src="images/dish.jpg" alt="" class="services__img" style="height: 100px;  width: 100px;">
+                <img src="dish.jpg" alt="" class="services__img" style="height: 100px;  width: 100px;">
 
                 <h3 class="services__title services__initial">Excellent food</h3>
                 <p class="services__description services__initial">We offer our clients excellent quality, services for many years, with the best and delicious food in the city.</p>
             </div>
             <div class="services__content">
-                <img src="images/dish1.jpg" alt="" class="services__img" style="height: 100px;  width: 100px;">
+                <img src="dish1.jpg" alt="" class="services__img" style="height: 100px;  width: 100px;">
 
                 <h3 class="services__title services__initial">Fast food</h3>
                 <p class="services__description services__initial">We offer our clients excellent quality, services for many years, with the best and delicious food in the city.</p>
             </div>
             <div class="services__content">
 
-                <img src="images/fast1.png" alt="" class="services__img" style="height: 100px;  width: 120px;">
+                <img src="fast1.png" alt="" class="services__img" style="height: 100px;  width: 120px;">
 
                 <h3 class="services__title services__initial">Delivery</h3>
                 <p class="services__description services__initial">We offer our clients excellent quality, services for many years, with the best and delicious food in the city.</p>
@@ -108,7 +108,7 @@
      <div class="menu__container bd-grid">
          <div class="menu-content">
             <div class="menu_inside">
-                <img src="images/sand.jpg" alt="" class="Menu__img">
+                <img src="sand.jpg" alt="" class="Menu__img">
                 <h3 class="menu__name">Sandwich</h3>
                 <span class="menu__detail">Delicious dish</span>
                 <span class="menu__preci">Rs.50</span>
@@ -124,7 +124,7 @@
         </div>
         <div class="menu-content">
             <div class="menu_inside">    
-                <img src="images/momo.jpg" alt="" class="Menu__img">
+                <img src="momo.jpg" alt="" class="Menu__img">
                 <h3 class="menu__name">Momos</h3>
                 <span class="menu__detail">Fantastic dish</span>
                 <span class="menu__preci">Rs.40</span>
@@ -140,7 +140,7 @@
         </div>     
         <div class="menu-content">
             <div class="menu_inside">
-                <img src="images/egg.jpg" alt="" class="Menu__img">
+                <img src="egg.jpg" alt="" class="Menu__img">
                 <h3 class="menu__name">Egg roll</h3>
                 <span class="menu__detail">Marvelous dish</span>
                 <span class="menu__preci">Rs.60</span>
@@ -156,7 +156,7 @@
         </div>
         <div class="menu-content">
             <div class="menu_inside">
-                <img src="images/sand.jpg" alt="" class="Menu__img">
+                <img src="sand.jpg" alt="" class="Menu__img">
                 <h3 class="menu__name">Sandwich</h3>
                 <span class="menu__detail">Delicious dish</span>
                 <span class="menu__preci">Rs.50</span>
@@ -172,7 +172,7 @@
         </div>
         <div class="menu-content">
             <div class="menu_inside">    
-                <img src="images/momo.jpg" alt="" class="Menu__img">
+                <img src="momo.jpg" alt="" class="Menu__img">
                 <h3 class="menu__name">Momos</h3>
                 <span class="menu__detail">Fantastic dish</span>
                 <span class="menu__preci">Rs.40</span>
@@ -188,7 +188,7 @@
         </div>     
         <div class="menu-content">
             <div class="menu_inside">
-                <img src="images/egg.jpg" alt="" class="Menu__img">
+                <img src="egg.jpg" alt="" class="Menu__img">
                 <h3 class="menu__name">Egg roll</h3>
                 <span class="menu__detail">Marvelous dish</span>
                 <span class="menu__preci">Rs.60</span>
